--- a/forms/runtime_error.html
+++ b/forms/runtime_error.html
@@ -11,118 +11,28 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
     integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <script type="module" src="../sripts/script.js"></script>
-  <style>
-    /* Add styles for the particle container */
-    #event-details-particles {
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            z-index: -1;
-        }
-
-    /* From Uiverse.io by vinodjangid07 */ 
-.button {
-    width: 50px;
-    height: 50px;
-    border-radius: 50%;
-    background-color: rgb(20, 20, 20);
-    border: none;
-    font-weight: 600;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    box-shadow: 0px 0px 0px 4px rgba(180, 160, 255, 0.253);
-    cursor: pointer;
-    transition: 0.3s;
-    overflow: hidden;
-    position: relative;
-    margin-left: 20px;
-    margin-top: 10px;
-}
-
-.svgIcon {
-    width: 12px;
-    transform: rotate(270deg); /* Always face left */
-    transition: 0.3s;
-}
-
-.svgIcon path {
-    fill: white;
-}
-
-.button:hover {
-    width: 100px;  /* Expand width for text */
-    border-radius: 50px;
-    transition: 0.3s;
-    background-color: #00FF99;
-    align-items: center;
-    justify-content: center;
-}
-
-/* Hide arrow when hovering */
-.button:hover .svgIcon {
-    opacity: 0;
-    transform: translateX(-10px); /* Moves it left before disappearing */
-    transition: 0.3s;
-}
-
-.spinner {
-  width: 15px;
-  height: 15px;
-  border: 2px solid white;
-  border-top: 2px solid transparent;
-  border-radius: 50%;
-  display: inline-block;
-  animation: spin 0.6s linear infinite;
-}
-
-@keyframes spin {
-  0% { transform: rotate(0deg); }
-  100% { transform: rotate(360deg); }
-}
-
-button:disabled {
-  background-color: gray;
-  cursor: not-allowed;
-}
-.button::before {
-    position: absolute;
-    content: "Back"; /* Set text */
-    color: white;
-    font-size: 0px;
-    transition: 0.3s;
-}
-
-.button:hover::before {
-    font-size: 13px;
-    opacity: 1;
-    transition: 0.3s;
-}
-  </style>
+  <script type="module" src="../sripts/script.js"></script>
+  <link rel="stylesheet" href="../styles/forms.css" />
+  <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
+  <script src="../scripts/particles_cfg.js"></script>
 </head>
 
 <body>
-
-  <!-- Particle Background -->
   <div id="particles-js"></div>
 
   <nav>
     <ul>
-        <button class="button" onclick="goBack()" >
-          <svg class="svgIcon" viewBox="0 0 384 512">
-            <path
-              d="M214.6 41.4c-12.5-12.5-32.8-12.5-45.3 0l-160 160c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L160 141.2V448c0 17.7 14.3 32 32 32s32-14.3 32-32V141.2L329.4 246.6c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3l-160-160z"
-            ></path>
-          </svg>
+      <button class="button" onclick="goBack()">
+        <svg class="svgIcon" viewBox="0 0 384 512">
+          <path
+            d="M214.6 41.4c-12.5-12.5-32.8-12.5-45.3 0l-160 160c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L160 141.2V448c0 17.7 14.3 32 32 32s32-14.3 32-32V141.2L329.4 246.6c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3l-160-160z">
+          </path>
+        </svg>
 
-        </button>
+      </button>
     </ul>
-</nav>
+  </nav>
 
-  <!-- Event Registration Form -->
   <section class="event-cards-container">
     <h2 class="event-cards-heading">Runtime Terror Registration</h2>
 
@@ -137,68 +47,72 @@ button:disabled {
             <input type="email" id="email" name="email" required>
             <input type="hidden" id="event_name" value="runtime_error">
             <label for="phoneNumber">Phone:</label>
-                        <input type="tel" id="phoneNumber" name="phoneNumber" required maxlength="10">
-                        <span id="phoneError" style="color: red;"></span>
+            <input type="tel" id="phoneNumber" name="phoneNumber" required maxlength="10">
+            <span id="phoneError" style="color: red;"></span>
 
-                        <script>
-                            document.getElementById("phoneNumber").addEventListener("input", function () {
-                                this.value = this.value.replace(/\D/g, ""); // Allow only numbers
+            <script>
+              document.getElementById("phoneNumber").addEventListener("input", function () {
+                this.value = this.value.replace(/\D/g, ""); // Allow only numbers
 
-                                let errorMessage = document.getElementById("phoneError");
-                                if (this.value.length !== 10) {
-                                    errorMessage.textContent = "Phone number must be exactly 10 digits.";
-                                } else {
-                                    errorMessage.textContent = "";
-                                }
-                            });
-                        </script>
+                let errorMessage = document.getElementById("phoneError");
+                if (this.value.length !== 10) {
+                  errorMessage.textContent = "Phone number must be exactly 10 digits.";
+                } else {
+                  errorMessage.textContent = "";
+                }
+              });
+            </script>
 
             <label for="college">College:</label>
-<select id="college" name="college" required>
-  <option value="" disabled selected>Select College</option>
-  <option value="KONGU ENGINEERING COLLEGE">KONGU ENGINEERING COLLEGE</option>
-  <option value="MEPCO SCHLENK ENGINEERING COLLEGE">MEPCO SCHLENK ENGINEERING COLLEGE</option>
-  <option value="RMD ENGINEERING COLLEGE">RMD ENGINEERING COLLEGE</option>
-  <option value="RMK ENGINEERING COLLEGE">RMK ENGINEERING COLLEGE</option>
-  <option value="RMK ENGINEERING COLLEGE / RMKEET / AMDE">RMK ENGINEERING COLLEGE / RMKEET / AMDE</option>
-  <option value="PANIMALAR INSTITUTE OF TECHNOLOGY">PANIMALAR INSTITUTE OF TECHNOLOGY</option>
-  <option value="PANIMALAR ENGINEERING COLLEGE">PANIMALAR ENGINEERING COLLEGE</option>
-  <option value="K.S RANGASAMY COLLEGE OF TECHNOLOGY">K.S RANGASAMY COLLEGE OF TECHNOLOGY</option>
-  <option value="VALLIAMMAI ENGINEERING COLLEGE">VALLIAMMAI ENGINEERING COLLEGE</option>
-  <option value="JEPPIAAR ENGINEERING COLLEGE">JEPPIAAR ENGINEERING COLLEGE</option>
-  <option value="RAJALAKSHMI ENGINEERING COLLEGE">RAJALAKSHMI ENGINEERING COLLEGE</option>
-  <option value="ST. JOSEPH'S COLLEGE OF ENGINEERING">ST. JOSEPH'S COLLEGE OF ENGINEERING</option>
-  <option value="SRI SAI RAM INSTITUTE OF TECHNOLOGY">SRI SAI RAM INSTITUTE OF TECHNOLOGY</option>
-  <option value="EASWARI ENGINEERING COLLEGE">EASWARI ENGINEERING COLLEGE</option>
-  <option value="SRI SAIRAM ENGINEERING COLLEGE">SRI SAIRAM ENGINEERING COLLEGE</option>
-  <option value="VELAMMAL ENGINEERING COLLEGE">VELAMMAL ENGINEERING COLLEGE</option>
-  <option value="MEENAKSHI SUNDARARAJAN ENGINEERING COLLEGE">MEENAKSHI SUNDARARAJAN ENGINEERING COLLEGE</option>
-  <option value="B.S. ABDUR RAHMAN CRESCENT ENGINEERING COLLEGE">B.S. ABDUR RAHMAN CRESCENT ENGINEERING COLLEGE</option>
-  <option value="VELAMMAL INSTITUTE OF TECHNOLOGY">VELAMMAL INSTITUTE OF TECHNOLOGY</option>
-  <option value="RAJALAKSHMI INSTITUTE OF TECHNOLOGY">RAJALAKSHMI INSTITUTE OF TECHNOLOGY</option>
-  <option value="SRI VENKATESWARA COLLEGE OF ENGINEERING">SRI VENKATESWARA COLLEGE OF ENGINEERING</option>
-  <option value="MADRAS INSTITUTE OF TECHNOLOGY">MADRAS INSTITUTE OF TECHNOLOGY</option>
-  <option value="ST. JOSEPH'S INSTITUTE OF TECHNOLOGY">ST. JOSEPH'S INSTITUTE OF TECHNOLOGY</option>
-  <option value="SSN COLLEGE OF ENGINEERING">SSN COLLEGE OF ENGINEERING</option>
-  <option value="SAVEETHA ENGINEERING COLLEGE">SAVEETHA ENGINEERING COLLEGE</option>
-  <option value="SA ENGINEERING COLLEGE">SA ENGINEERING COLLEGE</option>
-  <option value="KCG COLLEGE OF TECHNOLOGY">KCG COLLEGE OF TECHNOLOGY</option>
-  <option value="AGNI COLLEGE OF TECHNOLOGY">AGNI COLLEGE OF TECHNOLOGY</option>
-  <option value="JAYA ENGINEERING COLLEGE">JAYA ENGINEERING COLLEGE</option>
-  <option value="SRI VENKATESWARA COLLEGE OF TECHNOLOGY">SRI VENKATESWARA COLLEGE OF TECHNOLOGY</option>
-  <option value="MADHA ENGINEERING COLLEGE">MADHA ENGINEERING COLLEGE</option>
-  <option value="JEPPIAR INSTITUTE OF TECHNOLOGY">JEPPIAR INSTITUTE OF TECHNOLOGY</option>
-  <option value="INN INSTITUTE OF TECHNOLOGY">INN INSTITUTE OF TECHNOLOGY</option>
-  <option value="P.S.G. COLLEGE OF TECHNOLOGY">P.S.G. COLLEGE OF TECHNOLOGY</option>
-  <option value="P.S.G. INSTITUTE OF APPLIED SCIENCE & RESEARCH">P.S.G. INSTITUTE OF APPLIED SCIENCE & RESEARCH</option>
-  <option value="SETHU INSTITUTE OF TECHNOLOGY">SETHU INSTITUTE OF TECHNOLOGY</option>
-  <option value="PSNA COLLEGE OF ENGINEERING DINDIGUL">PSNA COLLEGE OF ENGINEERING DINDIGUL</option>
-  <option value="SUDHARSAN ENGINEERING COLLEGE">SUDHARSAN ENGINEERING COLLEGE</option>
-  <option value="COLLEGE OF ENGINEERING, GUINDY">COLLEGE OF ENGINEERING, GUINDY</option>
-  <option value="MADRAS INSTITUTE OF TECHNOLOGY, ANNA UNIVERSITY">MADRAS INSTITUTE OF TECHNOLOGY, ANNA UNIVERSITY</option>
-  <option value="INDIAN INSTITUTE OF TECHNOLOGY">INDIAN INSTITUTE OF TECHNOLOGY</option>
-  <option value="T.J.S. ENGINEERING COLLEGE">T.J.S. ENGINEERING COLLEGE</option>
-</select>
+            <select id="college" name="college" required>
+              <option value="" disabled selected>Select College</option>
+              <option value="KONGU ENGINEERING COLLEGE">KONGU ENGINEERING COLLEGE</option>
+              <option value="MEPCO SCHLENK ENGINEERING COLLEGE">MEPCO SCHLENK ENGINEERING COLLEGE</option>
+              <option value="RMD ENGINEERING COLLEGE">RMD ENGINEERING COLLEGE</option>
+              <option value="RMK ENGINEERING COLLEGE">RMK ENGINEERING COLLEGE</option>
+              <option value="RMK ENGINEERING COLLEGE / RMKEET / AMDE">RMK ENGINEERING COLLEGE / RMKEET / AMDE</option>
+              <option value="PANIMALAR INSTITUTE OF TECHNOLOGY">PANIMALAR INSTITUTE OF TECHNOLOGY</option>
+              <option value="PANIMALAR ENGINEERING COLLEGE">PANIMALAR ENGINEERING COLLEGE</option>
+              <option value="K.S RANGASAMY COLLEGE OF TECHNOLOGY">K.S RANGASAMY COLLEGE OF TECHNOLOGY</option>
+              <option value="VALLIAMMAI ENGINEERING COLLEGE">VALLIAMMAI ENGINEERING COLLEGE</option>
+              <option value="JEPPIAAR ENGINEERING COLLEGE">JEPPIAAR ENGINEERING COLLEGE</option>
+              <option value="RAJALAKSHMI ENGINEERING COLLEGE">RAJALAKSHMI ENGINEERING COLLEGE</option>
+              <option value="ST. JOSEPH'S COLLEGE OF ENGINEERING">ST. JOSEPH'S COLLEGE OF ENGINEERING</option>
+              <option value="SRI SAI RAM INSTITUTE OF TECHNOLOGY">SRI SAI RAM INSTITUTE OF TECHNOLOGY</option>
+              <option value="EASWARI ENGINEERING COLLEGE">EASWARI ENGINEERING COLLEGE</option>
+              <option value="SRI SAIRAM ENGINEERING COLLEGE">SRI SAIRAM ENGINEERING COLLEGE</option>
+              <option value="VELAMMAL ENGINEERING COLLEGE">VELAMMAL ENGINEERING COLLEGE</option>
+              <option value="MEENAKSHI SUNDARARAJAN ENGINEERING COLLEGE">MEENAKSHI SUNDARARAJAN ENGINEERING COLLEGE
+              </option>
+              <option value="B.S. ABDUR RAHMAN CRESCENT ENGINEERING COLLEGE">B.S. ABDUR RAHMAN CRESCENT ENGINEERING
+                COLLEGE</option>
+              <option value="VELAMMAL INSTITUTE OF TECHNOLOGY">VELAMMAL INSTITUTE OF TECHNOLOGY</option>
+              <option value="RAJALAKSHMI INSTITUTE OF TECHNOLOGY">RAJALAKSHMI INSTITUTE OF TECHNOLOGY</option>
+              <option value="SRI VENKATESWARA COLLEGE OF ENGINEERING">SRI VENKATESWARA COLLEGE OF ENGINEERING</option>
+              <option value="MADRAS INSTITUTE OF TECHNOLOGY">MADRAS INSTITUTE OF TECHNOLOGY</option>
+              <option value="ST. JOSEPH'S INSTITUTE OF TECHNOLOGY">ST. JOSEPH'S INSTITUTE OF TECHNOLOGY</option>
+              <option value="SSN COLLEGE OF ENGINEERING">SSN COLLEGE OF ENGINEERING</option>
+              <option value="SAVEETHA ENGINEERING COLLEGE">SAVEETHA ENGINEERING COLLEGE</option>
+              <option value="SA ENGINEERING COLLEGE">SA ENGINEERING COLLEGE</option>
+              <option value="KCG COLLEGE OF TECHNOLOGY">KCG COLLEGE OF TECHNOLOGY</option>
+              <option value="AGNI COLLEGE OF TECHNOLOGY">AGNI COLLEGE OF TECHNOLOGY</option>
+              <option value="JAYA ENGINEERING COLLEGE">JAYA ENGINEERING COLLEGE</option>
+              <option value="SRI VENKATESWARA COLLEGE OF TECHNOLOGY">SRI VENKATESWARA COLLEGE OF TECHNOLOGY</option>
+              <option value="MADHA ENGINEERING COLLEGE">MADHA ENGINEERING COLLEGE</option>
+              <option value="JEPPIAR INSTITUTE OF TECHNOLOGY">JEPPIAR INSTITUTE OF TECHNOLOGY</option>
+              <option value="INN INSTITUTE OF TECHNOLOGY">INN INSTITUTE OF TECHNOLOGY</option>
+              <option value="P.S.G. COLLEGE OF TECHNOLOGY">P.S.G. COLLEGE OF TECHNOLOGY</option>
+              <option value="P.S.G. INSTITUTE OF APPLIED SCIENCE & RESEARCH">P.S.G. INSTITUTE OF APPLIED SCIENCE &
+                RESEARCH</option>
+              <option value="SETHU INSTITUTE OF TECHNOLOGY">SETHU INSTITUTE OF TECHNOLOGY</option>
+              <option value="PSNA COLLEGE OF ENGINEERING DINDIGUL">PSNA COLLEGE OF ENGINEERING DINDIGUL</option>
+              <option value="SUDHARSAN ENGINEERING COLLEGE">SUDHARSAN ENGINEERING COLLEGE</option>
+              <option value="COLLEGE OF ENGINEERING, GUINDY">COLLEGE OF ENGINEERING, GUINDY</option>
+              <option value="MADRAS INSTITUTE OF TECHNOLOGY, ANNA UNIVERSITY">MADRAS INSTITUTE OF TECHNOLOGY, ANNA
+                UNIVERSITY</option>
+              <option value="INDIAN INSTITUTE OF TECHNOLOGY">INDIAN INSTITUTE OF TECHNOLOGY</option>
+              <option value="T.J.S. ENGINEERING COLLEGE">T.J.S. ENGINEERING COLLEGE</option>
+            </select>
 
             <label for="year">Year:</label>
             <select id="year" name="year" required>
@@ -215,7 +129,7 @@ button:disabled {
               <option value="1">1</option>
               <option value="2">2</option>
               <option value="3">3</option>
-              
+
             </select>
             <button type="submit" id="registerBtn">
               <span id="btnText">Register</span>
@@ -226,94 +140,6 @@ button:disabled {
       </div>
     </section>
   </section>
-
-  <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
-  
-  <script>
-document.addEventListener("DOMContentLoaded", function () {
-    particlesJS("particles-js", {
-        particles: {
-            number: { value: 100, density: { enable: true, value_area: 800 } },
-            color: { value: "#00FFFF" },
-            shape: { type: "circle" },
-            opacity: { value: 0.5, random: true },
-            size: { value: 3, random: true },
-            line_linked: {
-                enable: true,
-                distance: 150,
-                color: "#00FFFF",
-                opacity: 0.4,
-                width: 1
-            },
-            move: {
-                enable: true,
-                speed: 2,
-                direction: "none",
-                random: false,
-                out_mode: "out"
-            }
-        },
-        interactivity: {
-            events: {
-                onhover: { enable: true, mode: "grab" },
-                onclick: { enable: true, mode: "push" }
-            }
-        },
-        retina_detect: true
-    });
-});
-
-function goBack() {
-        window.history.back(); // Takes the user to the previous page
-    }
-    document.getElementById("registrationForm").addEventListener("submit", function (event) {
-      event.preventDefault();
-
-      const registerBtn = document.getElementById("registerBtn");
-    const btnText = document.getElementById("btnText");
-    const loadingSpinner = document.getElementById("loadingSpinner");
-
-    // Show loading, disable button
-    registerBtn.disabled = true;
-    btnText.style.display = "none";
-    loadingSpinner.style.display = "inline-block";
-
-
-      const formData = {
-        participantName: document.getElementById("participantName").value,
-        email: document.getElementById("email").value,
-        phoneNumber: document.getElementById("phoneNumber").value,
-        college: document.getElementById("college").value,
-        year: document.getElementById("year").value,
-        participantsCount: parseInt(1)
-      };
-
-      fetch("https://courageous-simplicity-production.up.railway.app/coding", {
-        method: "POST",
-        headers: {
-          "Content-Type": "application/json"
-        },
-        body: JSON.stringify(formData)
-      })
-      .then(response => {
-        if (response.ok) {
-            return response.json();
-        }
-        throw new Error("Registration failed");
-    })
-    .then(data => {
-        // ✅ Redirect to success page after registration
-        window.location.href = "success.html";
-    })
-    .catch(error => {
-        alert("Error submitting form. Please try again.");
-        registerBtn.disabled = false;  // Re-enable button
-        btnText.style.display = "inline";
-        loadingSpinner.style.display = "none";
-    });
-});
-  </script>
-
 </body>
 
 </html>
