--- a/forms/rhetoric_rumble.html
+++ b/forms/rhetoric_rumble.html
@@ -12,107 +12,9 @@
     integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
   <script type="module" src="../sripts/script.js"></script>
-  <style>
-    /* Add styles for the particle container */
-    #event-details-particles {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      z-index: -1;
-    }
-
-    /* From Uiverse.io by vinodjangid07 */
-    .button {
-      width: 50px;
-      height: 50px;
-      border-radius: 50%;
-      background-color: rgb(20, 20, 20);
-      border: none;
-      font-weight: 600;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      box-shadow: 0px 0px 0px 4px rgba(180, 160, 255, 0.253);
-      cursor: pointer;
-      transition: 0.3s;
-      overflow: hidden;
-      position: relative;
-      margin-left: 20px;
-      margin-top: 10px;
-      outline: none;
-    }
-
-    .svgIcon {
-      width: 12px;
-      transform: rotate(270deg);
-      /* Always face left */
-      transition: 0.3s;
-    }
-
-    .svgIcon path {
-      fill: white;
-    }
-
-    .button:hover {
-      width: 100px;
-      /* Expand width for text */
-      border-radius: 50px;
-      transition: 0.3s;
-      background-color: #00FF99;
-      align-items: center;
-      justify-content: center;
-    }
-
-    /* Hide arrow when hovering */
-    .button:hover .svgIcon {
-      opacity: 0;
-      transform: translateX(-10px);
-      /* Moves it left before disappearing */
-      transition: 0.3s;
-    }
-
-    .spinner {
-      width: 15px;
-      height: 15px;
-      border: 2px solid white;
-      border-top: 2px solid transparent;
-      border-radius: 50%;
-      display: inline-block;
-      animation: spin 0.6s linear infinite;
-    }
-
-    @keyframes spin {
-      0% {
-        transform: rotate(0deg);
-      }
-
-      100% {
-        transform: rotate(360deg);
-      }
-    }
-
-    button:disabled {
-      background-color: gray;
-      cursor: not-allowed;
-    }
-
-    .button::before {
-      position: absolute;
-      content: "Back";
-      /* Set text */
-      color: white;
-      font-size: 0px;
-      transition: 0.3s;
-    }
-
-    .button:hover::before {
-      font-size: 13px;
-      opacity: 1;
-      transition: 0.3s;
-    }
-  </style>
+  <link rel="stylesheet" href="../styles/forms.css" />
+  <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
+  <script src="../scripts/particles_cfg.js"></script>
 </head>
 
 <body>
@@ -243,94 +145,6 @@
       </div>
     </section>
   </section>
-
-  <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
-
-  <script>
-    document.addEventListener("DOMContentLoaded", function () {
-      particlesJS("particles-js", {
-        particles: {
-          number: { value: 100, density: { enable: true, value_area: 800 } },
-          color: { value: "#00FFFF" },
-          shape: { type: "circle" },
-          opacity: { value: 0.5, random: true },
-          size: { value: 3, random: true },
-          line_linked: {
-            enable: true,
-            distance: 150,
-            color: "#00FFFF",
-            opacity: 0.4,
-            width: 1
-          },
-          move: {
-            enable: true,
-            speed: 2,
-            direction: "none",
-            random: false,
-            out_mode: "out"
-          }
-        },
-        interactivity: {
-          events: {
-            onhover: { enable: true, mode: "grab" },
-            onclick: { enable: true, mode: "push" }
-          }
-        },
-        retina_detect: true
-      });
-    });
-
-    function goBack() {
-      window.history.back();
-    }
-    document.getElementById("registrationForm").addEventListener("submit", function (event) {
-      event.preventDefault();
-
-      const registerBtn = document.getElementById("registerBtn");
-      const btnText = document.getElementById("btnText");
-      const loadingSpinner = document.getElementById("loadingSpinner");
-
-      // Show loading, disable button
-      registerBtn.disabled = true;
-      btnText.style.display = "none";
-      loadingSpinner.style.display = "inline-block";
-
-
-      const formData = {
-        participantName: document.getElementById("participantName").value,
-        email: document.getElementById("email").value,
-        phoneNumber: document.getElementById("phoneNumber").value,
-        college: document.getElementById("college").value,
-        year: document.getElementById("year").value,
-        participantsCount: parseInt(1)
-      };
-
-      fetch("https://courageous-simplicity-production.up.railway.app/debate", {
-        method: "POST",
-        headers: {
-          "Content-Type": "application/json"
-        },
-        body: JSON.stringify(formData)
-      })
-        .then(response => {
-          if (response.ok) {
-            return response.json();
-          }
-          throw new Error("Registration failed");
-        })
-        .then(data => {
-          // ✅ Redirect to success page after registration
-          window.location.href = "success.html";
-        })
-        .catch(error => {
-          alert("Error submitting form. Please try again.");
-          registerBtn.disabled = false;  // Re-enable button
-          btnText.style.display = "inline";
-          loadingSpinner.style.display = "none";
-        });
-    });
-  </script>
-
 </body>
 
 </html>
