--- a/src/technical_events.html
+++ b/src/technical_events.html
@@ -160,7 +160,7 @@
     </div>
   </section>
   <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
-  <script src="script.js"></script>
+  <!-- <script src="../script.js"></script> -->
   <script>
     /* particlesJS('dom-id', params);
     /* @dom-id  the id of the canvas element
