--- a/forms/innovatrix.html
+++ b/forms/innovatrix.html
@@ -1,145 +1,252 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Event Registration</title>
+    <link rel="stylesheet" href="../styles/regi.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
+      integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <script type="module" src="../scripts/script.js"></script>
+    <link rel="stylesheet" href="../styles/forms.css" />
+    <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
+    <script src="../scripts/particles_cfg.js"></script>
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Event Registration</title>
-  <link rel="stylesheet" href="../styles/regi.css">
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
-    integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg=="
-    crossorigin="anonymous" referrerpolicy="no-referrer" />
-  <script type="module" src="../scripts/script.js"></script>
-  <link rel="stylesheet" href="../styles/forms.css" />
-  <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
-  <script src="../scripts/particles_cfg.js" />
-</head>
+  <body>
+    <div id="particles-js"></div>
 
-<body>
-  <div id="particles-js"></div>
+    <nav>
+      <ul>
+        <button class="button" onclick="goBack()">
+          <svg class="svgIcon" viewBox="0 0 384 512">
+            <path
+              d="M214.6 41.4c-12.5-12.5-32.8-12.5-45.3 0l-160 160c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L160 141.2V448c0 17.7 14.3 32 32 32s32-14.3 32-32V141.2L329.4 246.6c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3l-160-160z"
+            ></path>
+          </svg>
+        </button>
+      </ul>
+    </nav>
 
-  <nav>
-    <ul>
-      <button class="button" onclick="goBack()">
-        <svg class="svgIcon" viewBox="0 0 384 512">
-          <path
-            d="M214.6 41.4c-12.5-12.5-32.8-12.5-45.3 0l-160 160c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L160 141.2V448c0 17.7 14.3 32 32 32s32-14.3 32-32V141.2L329.4 246.6c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3l-160-160z">
-          </path>
-        </svg>
-      </button>
-    </ul>
-  </nav>
+    <section class="event-cards-container">
+      <h2 class="event-cards-heading">Innovatrix Registration</h2>
 
-  <section class="event-cards-container">
-    <h2 class="event-cards-heading">Innovatrix Registration</h2>
+      <section id="events" class="events-container">
+        <div class="events-inner">
+          <div class="events-card">
+            <form id="registrationForm">
+              <label for="participantName">Name:</label>
+              <input
+                type="text"
+                id="participantName"
+                name="participantName"
+                required
+              />
 
-    <section id="events" class="events-container">
-      <div class="events-inner">
-        <div class="events-card">
-          <form id="registrationForm">
-            <label for="participantName">Name:</label>
-            <input type="text" id="participantName" name="participantName" required>
+              <label for="email">Email:</label>
+              <input type="email" id="email" name="email" required />
+              <input type="hidden" id="event_name" value="innovatrix" />
+              <label for="phoneNumber">Phone:</label>
+              <input
+                type="tel"
+                id="phoneNumber"
+                name="phoneNumber"
+                required
+                maxlength="10"
+              />
+              <span id="phoneError" style="color: red"></span>
 
-            <label for="email">Email:</label>
-            <input type="email" id="email" name="email" required>
-            <input type="hidden" id="event_name" value="innovatrix">
-            <label for="phoneNumber">Phone:</label>
-            <input type="tel" id="phoneNumber" name="phoneNumber" required maxlength="10">
-            <span id="phoneError" style="color: red;"></span>
+              <script>
+                document
+                  .getElementById("phoneNumber")
+                  .addEventListener("input", function () {
+                    this.value = this.value.replace(/\D/g, ""); // Allow only numbers
 
-            <script>
-              document.getElementById("phoneNumber").addEventListener("input", function () {
-                this.value = this.value.replace(/\D/g, ""); // Allow only numbers
+                    let errorMessage = document.getElementById("phoneError");
+                    if (this.value.length !== 10) {
+                      errorMessage.textContent =
+                        "Phone number must be exactly 10 digits.";
+                    } else {
+                      errorMessage.textContent = "";
+                    }
+                  });
+              </script>
 
-                let errorMessage = document.getElementById("phoneError");
-                if (this.value.length !== 10) {
-                  errorMessage.textContent = "Phone number must be exactly 10 digits.";
-                } else {
-                  errorMessage.textContent = "";
-                }
-              });
-            </script>
+              <label for="college">College:</label>
+              <select id="college" name="college" required>
+                <option value="" disabled selected>Select Your College</option>
+                <option value="KONGU ENGINEERING COLLEGE">
+                  KONGU ENGINEERING COLLEGE
+                </option>
+                <option value="MEPCO SCHLENK ENGINEERING COLLEGE">
+                  MEPCO SCHLENK ENGINEERING COLLEGE
+                </option>
+                <option value="RMD ENGINEERING COLLEGE">
+                  RMD ENGINEERING COLLEGE
+                </option>
+                <option value="RMK ENGINEERING COLLEGE">
+                  RMK ENGINEERING COLLEGE
+                </option>
+                <option value="RMK ENGINEERING COLLEGE / RMKEET / AMDE">
+                  RMK ENGINEERING COLLEGE / RMKEET / AMDE
+                </option>
+                <option value="PANIMALAR INSTITUTE OF TECHNOLOGY">
+                  PANIMALAR INSTITUTE OF TECHNOLOGY
+                </option>
+                <option value="PANIMALAR ENGINEERING COLLEGE">
+                  PANIMALAR ENGINEERING COLLEGE
+                </option>
+                <option value="K.S RANGASAMY COLLEGE OF TECHNOLOGY">
+                  K.S RANGASAMY COLLEGE OF TECHNOLOGY
+                </option>
+                <option value="VALLIAMMAI ENGINEERING COLLEGE">
+                  VALLIAMMAI ENGINEERING COLLEGE
+                </option>
+                <option value="JEPPIAAR ENGINEERING COLLEGE">
+                  JEPPIAAR ENGINEERING COLLEGE
+                </option>
+                <option value="RAJALAKSHMI ENGINEERING COLLEGE">
+                  RAJALAKSHMI ENGINEERING COLLEGE
+                </option>
+                <option value="ST. JOSEPH'S COLLEGE OF ENGINEERING">
+                  ST. JOSEPH'S COLLEGE OF ENGINEERING
+                </option>
+                <option value="SRI SAI RAM INSTITUTE OF TECHNOLOGY">
+                  SRI SAI RAM INSTITUTE OF TECHNOLOGY
+                </option>
+                <option value="EASWARI ENGINEERING COLLEGE">
+                  EASWARI ENGINEERING COLLEGE
+                </option>
+                <option value="SRI SAIRAM ENGINEERING COLLEGE">
+                  SRI SAIRAM ENGINEERING COLLEGE
+                </option>
+                <option value="VELAMMAL ENGINEERING COLLEGE">
+                  VELAMMAL ENGINEERING COLLEGE
+                </option>
+                <option value="MEENAKSHI SUNDARARAJAN ENGINEERING COLLEGE">
+                  MEENAKSHI SUNDARARAJAN ENGINEERING COLLEGE
+                </option>
+                <option value="B.S. ABDUR RAHMAN CRESCENT ENGINEERING COLLEGE">
+                  B.S. ABDUR RAHMAN CRESCENT ENGINEERING COLLEGE
+                </option>
+                <option value="VELAMMAL INSTITUTE OF TECHNOLOGY">
+                  VELAMMAL INSTITUTE OF TECHNOLOGY
+                </option>
+                <option value="RAJALAKSHMI INSTITUTE OF TECHNOLOGY">
+                  RAJALAKSHMI INSTITUTE OF TECHNOLOGY
+                </option>
+                <option value="SRI VENKATESWARA COLLEGE OF ENGINEERING">
+                  SRI VENKATESWARA COLLEGE OF ENGINEERING
+                </option>
+                <option value="MADRAS INSTITUTE OF TECHNOLOGY">
+                  MADRAS INSTITUTE OF TECHNOLOGY
+                </option>
+                <option value="ST. JOSEPH'S INSTITUTE OF TECHNOLOGY">
+                  ST. JOSEPH'S INSTITUTE OF TECHNOLOGY
+                </option>
+                <option value="SSN COLLEGE OF ENGINEERING">
+                  SSN COLLEGE OF ENGINEERING
+                </option>
+                <option value="SAVEETHA ENGINEERING COLLEGE">
+                  SAVEETHA ENGINEERING COLLEGE
+                </option>
+                <option value="SA ENGINEERING COLLEGE">
+                  SA ENGINEERING COLLEGE
+                </option>
+                <option value="KCG COLLEGE OF TECHNOLOGY">
+                  KCG COLLEGE OF TECHNOLOGY
+                </option>
+                <option value="AGNI COLLEGE OF TECHNOLOGY">
+                  AGNI COLLEGE OF TECHNOLOGY
+                </option>
+                <option value="JAYA ENGINEERING COLLEGE">
+                  JAYA ENGINEERING COLLEGE
+                </option>
+                <option value="SRI VENKATESWARA COLLEGE OF TECHNOLOGY">
+                  SRI VENKATESWARA COLLEGE OF TECHNOLOGY
+                </option>
+                <option value="MADHA ENGINEERING COLLEGE">
+                  MADHA ENGINEERING COLLEGE
+                </option>
+                <option value="JEPPIAR INSTITUTE OF TECHNOLOGY">
+                  JEPPIAR INSTITUTE OF TECHNOLOGY
+                </option>
+                <option value="INN INSTITUTE OF TECHNOLOGY">
+                  INN INSTITUTE OF TECHNOLOGY
+                </option>
+                <option value="P.S.G. COLLEGE OF TECHNOLOGY">
+                  P.S.G. COLLEGE OF TECHNOLOGY
+                </option>
+                <option value="P.S.G. INSTITUTE OF APPLIED SCIENCE & RESEARCH">
+                  P.S.G. INSTITUTE OF APPLIED SCIENCE & RESEARCH
+                </option>
+                <option value="SETHU INSTITUTE OF TECHNOLOGY">
+                  SETHU INSTITUTE OF TECHNOLOGY
+                </option>
+                <option value="PSNA COLLEGE OF ENGINEERING DINDIGUL">
+                  PSNA COLLEGE OF ENGINEERING DINDIGUL
+                </option>
+                <option value="SUDHARSAN ENGINEERING COLLEGE">
+                  SUDHARSAN ENGINEERING COLLEGE
+                </option>
+                <option value="COLLEGE OF ENGINEERING, GUINDY">
+                  COLLEGE OF ENGINEERING, GUINDY
+                </option>
+                <option value="MADRAS INSTITUTE OF TECHNOLOGY, ANNA UNIVERSITY">
+                  MADRAS INSTITUTE OF TECHNOLOGY, ANNA UNIVERSITY
+                </option>
+                <option value="INDIAN INSTITUTE OF TECHNOLOGY">
+                  INDIAN INSTITUTE OF TECHNOLOGY
+                </option>
+                <option value="T.J.S. ENGINEERING COLLEGE">
+                  T.J.S. ENGINEERING COLLEGE
+                </option>
+              </select>
 
-            <label for="college">College:</label>
-            <select id="college" name="college" required>
-              <option value="" disabled selected>Select Your College</option>
-              <option value="KONGU ENGINEERING COLLEGE">KONGU ENGINEERING COLLEGE</option>
-              <option value="MEPCO SCHLENK ENGINEERING COLLEGE">MEPCO SCHLENK ENGINEERING COLLEGE</option>
-              <option value="RMD ENGINEERING COLLEGE">RMD ENGINEERING COLLEGE</option>
-              <option value="RMK ENGINEERING COLLEGE">RMK ENGINEERING COLLEGE</option>
-              <option value="RMK ENGINEERING COLLEGE / RMKEET / AMDE">RMK ENGINEERING COLLEGE / RMKEET / AMDE</option>
-              <option value="PANIMALAR INSTITUTE OF TECHNOLOGY">PANIMALAR INSTITUTE OF TECHNOLOGY</option>
-              <option value="PANIMALAR ENGINEERING COLLEGE">PANIMALAR ENGINEERING COLLEGE</option>
-              <option value="K.S RANGASAMY COLLEGE OF TECHNOLOGY">K.S RANGASAMY COLLEGE OF TECHNOLOGY</option>
-              <option value="VALLIAMMAI ENGINEERING COLLEGE">VALLIAMMAI ENGINEERING COLLEGE</option>
-              <option value="JEPPIAAR ENGINEERING COLLEGE">JEPPIAAR ENGINEERING COLLEGE</option>
-              <option value="RAJALAKSHMI ENGINEERING COLLEGE">RAJALAKSHMI ENGINEERING COLLEGE</option>
-              <option value="ST. JOSEPH'S COLLEGE OF ENGINEERING">ST. JOSEPH'S COLLEGE OF ENGINEERING</option>
-              <option value="SRI SAI RAM INSTITUTE OF TECHNOLOGY">SRI SAI RAM INSTITUTE OF TECHNOLOGY</option>
-              <option value="EASWARI ENGINEERING COLLEGE">EASWARI ENGINEERING COLLEGE</option>
-              <option value="SRI SAIRAM ENGINEERING COLLEGE">SRI SAIRAM ENGINEERING COLLEGE</option>
-              <option value="VELAMMAL ENGINEERING COLLEGE">VELAMMAL ENGINEERING COLLEGE</option>
-              <option value="MEENAKSHI SUNDARARAJAN ENGINEERING COLLEGE">MEENAKSHI SUNDARARAJAN ENGINEERING COLLEGE
-              </option>
-              <option value="B.S. ABDUR RAHMAN CRESCENT ENGINEERING COLLEGE">B.S. ABDUR RAHMAN CRESCENT ENGINEERING
-                COLLEGE</option>
-              <option value="VELAMMAL INSTITUTE OF TECHNOLOGY">VELAMMAL INSTITUTE OF TECHNOLOGY</option>
-              <option value="RAJALAKSHMI INSTITUTE OF TECHNOLOGY">RAJALAKSHMI INSTITUTE OF TECHNOLOGY</option>
-              <option value="SRI VENKATESWARA COLLEGE OF ENGINEERING">SRI VENKATESWARA COLLEGE OF ENGINEERING</option>
-              <option value="MADRAS INSTITUTE OF TECHNOLOGY">MADRAS INSTITUTE OF TECHNOLOGY</option>
-              <option value="ST. JOSEPH'S INSTITUTE OF TECHNOLOGY">ST. JOSEPH'S INSTITUTE OF TECHNOLOGY</option>
-              <option value="SSN COLLEGE OF ENGINEERING">SSN COLLEGE OF ENGINEERING</option>
-              <option value="SAVEETHA ENGINEERING COLLEGE">SAVEETHA ENGINEERING COLLEGE</option>
-              <option value="SA ENGINEERING COLLEGE">SA ENGINEERING COLLEGE</option>
-              <option value="KCG COLLEGE OF TECHNOLOGY">KCG COLLEGE OF TECHNOLOGY</option>
-              <option value="AGNI COLLEGE OF TECHNOLOGY">AGNI COLLEGE OF TECHNOLOGY</option>
-              <option value="JAYA ENGINEERING COLLEGE">JAYA ENGINEERING COLLEGE</option>
-              <option value="SRI VENKATESWARA COLLEGE OF TECHNOLOGY">SRI VENKATESWARA COLLEGE OF TECHNOLOGY</option>
-              <option value="MADHA ENGINEERING COLLEGE">MADHA ENGINEERING COLLEGE</option>
-              <option value="JEPPIAR INSTITUTE OF TECHNOLOGY">JEPPIAR INSTITUTE OF TECHNOLOGY</option>
-              <option value="INN INSTITUTE OF TECHNOLOGY">INN INSTITUTE OF TECHNOLOGY</option>
-              <option value="P.S.G. COLLEGE OF TECHNOLOGY">P.S.G. COLLEGE OF TECHNOLOGY</option>
-              <option value="P.S.G. INSTITUTE OF APPLIED SCIENCE & RESEARCH">P.S.G. INSTITUTE OF APPLIED SCIENCE &
-                RESEARCH</option>
-              <option value="SETHU INSTITUTE OF TECHNOLOGY">SETHU INSTITUTE OF TECHNOLOGY</option>
-              <option value="PSNA COLLEGE OF ENGINEERING DINDIGUL">PSNA COLLEGE OF ENGINEERING DINDIGUL</option>
-              <option value="SUDHARSAN ENGINEERING COLLEGE">SUDHARSAN ENGINEERING COLLEGE</option>
-              <option value="COLLEGE OF ENGINEERING, GUINDY">COLLEGE OF ENGINEERING, GUINDY</option>
-              <option value="MADRAS INSTITUTE OF TECHNOLOGY, ANNA UNIVERSITY">MADRAS INSTITUTE OF TECHNOLOGY, ANNA
-                UNIVERSITY</option>
-              <option value="INDIAN INSTITUTE OF TECHNOLOGY">INDIAN INSTITUTE OF TECHNOLOGY</option>
-              <option value="T.J.S. ENGINEERING COLLEGE">T.J.S. ENGINEERING COLLEGE</option>
-            </select>
+              <label for="year">Year:</label>
+              <select id="year" name="year" required>
+                <option value="" disabled selected>Select Year</option>
+                <option value="1st Year">1st Year</option>
+                <option value="2nd Year">2nd Year</option>
+                <option value="3rd Year">3rd Year</option>
+              </select>
 
-            <label for="year">Year:</label>
-            <select id="year" name="year" required>
-              <option value="" disabled selected>Select Year</option>
-              <option value="1st Year">1st Year</option>
-              <option value="2nd Year">2nd Year</option>
-              <option value="3rd Year">3rd Year</option>
-            </select>
+              <label for="participantsCount">Number of Participants:</label>
+              <select id="participantsCount" name="participantsCount" required>
+                <option value="" disabled selected>
+                  Select Number of Participants
+                </option>
+                <option value="1">1</option>
+                <option value="2">2</option>
+                <option value="3">3</option>
+              </select>
 
-            <label for="participantsCount">Number of Participants:</label>
-            <select id="participantsCount" name="participantsCount" required>
-
-              <option value="" disabled selected>Select Number of Participants</option>
-              <option value="1">1</option>
-              <option value="2">2</option>
-              <option value="3">3</option>
-
-            </select>
-
-            <button type="submit" id="registerBtn">
-              <span id="btnText">Register</span>
-              <span id="loadingSpinner" class="spinner" style="display: none;"></span>
-            </button>
-          </form>
+              <button type="submit" id="registerBtn">
+                <span id="btnText">Register</span>
+                <span
+                  id="loadingSpinner"
+                  class="spinner"
+                  style="display: none"
+                ></span>
+              </button>
+            </form>
+          </div>
         </div>
-      </div>
+      </section>
     </section>
-  </section>
-</body>
-
+  </body>
 </html>
+
