--- a/forms/pixel_perfect.html
+++ b/forms/pixel_perfect.html
@@ -12,6 +12,7 @@
     integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
   <script type="module" src="../scripts/script.js"></script>
+  <link rel="stylesheet" href="../styles/forms.css" />
   <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
   <script src="../scripts/particles_cfg.js"></script>
 </head>
