--- a/src/runtime_error.html
+++ b/src/runtime_error.html
@@ -36,9 +36,18 @@
                 <h2 class="event-details-title">Runtime Terror</h2>
                 <br>
                 <br>
-                <h3 class="event-details-subtitle">Event Description</h3>
-                <p class="event-details-description">
-                    Runtime Terror-Code in Chaos is an electrifying coding challenge that tests your problem-solving skills, speed, and resilience. With proctored coding, unexpected hurdles, and thrilling rounds, only the best will survive the chaos.                </p>
+                <!-- <h3 class="event-details-subtitle">Event Description</h3> -->
+                <!-- <p class="event-details-description">
+                    Runtime Terror-Code in Chaos is an electrifying coding challenge that tests your problem-solving skills, speed, and resilience. 
+                </p> -->
+                <h4 class="event-details-subtitle">Event Rounds</h4><br>
+                <div class="event-details-rounds">
+                    <h4>Round 1: Debugging Round</h4>
+                    <p>Participants will tackle challenging debugging tasks to test their problem-solving skills.</p>
+                    <h4>Round 2: HackerRank Proctored Test</h4>
+                    <p>A proctored coding test on HackerRank (participants must have a HackerRank account).</p>
+                    <p><strong>Note:</strong> The winner will be determined based on the time and space complexity of their solutions.</p>
+                </div>
                 <div class="event-details-info">
                     <p>Fee: <span class="event-details-value">Free Entry</span></p>
                     
@@ -76,7 +85,7 @@
     </section>
 
     <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
-    <!-- <script src="script.js"></script> -->
+    <script src="script.js"></script>
 
     <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
 <script>
