--- a/forms/runtime_error.html
+++ b/forms/runtime_error.html
@@ -126,9 +126,9 @@
             <select id="participantsCount" name="participantsCount" required>
 
               <option value="" disabled selected>Select Number of Participants</option>
-              <option value="1">1</option>
-              <option value="2">2</option>
-              <option value="3">3</option>
+              <option value="1">1 (Individual Event)</option>
+<!--               <option value="2">2</option>
+              <option value="3">3</option> -->
 
             </select>
             <button type="submit" id="registerBtn">
