--- a/src/runtime_error.html
+++ b/src/runtime_error.html
@@ -49,6 +49,8 @@
                     <p><strong>Note:</strong> The winner will be determined based on the time and space complexity of their solutions.</p>
                 </div>
                 <div class="event-details-info">
+                    <p>Fee: <span class="event-details-value">Team Size: 1 (Individual Event)</span></p><br>
+
                     <p>Fee: <span class="event-details-value">Free Entry</span></p>
                     
                     <!-- <p>Category: <span class="event-details-value"> Individual And Team Event</span></p> -->
