--- a/src/runtime_error.html
+++ b/src/runtime_error.html
@@ -49,7 +49,7 @@
                     <p><strong>Note:</strong> The winner will be determined based on the time and space complexity of their solutions.</p>
                 </div>
                 <div class="event-details-info">
-                    <p>Fee: <span class="event-details-value">Team Size: 1 (Individual Event)</span></p><br>
+                    <p>Team Size: <span class="event-details-value">1 (Individual Event)</span></p><br>
 
                     <p>Fee: <span class="event-details-value">Free Entry</span></p>
                     
