--- a/src/surprise_event.html
+++ b/src/surprise_event.html
@@ -58,9 +58,9 @@
                 </div>
                 <!-- <p>Team registrations: <span class="event-details-value">463</span></p> -->
                  <br>
-                <a href="../forms/surprise_event.html" class="event-details-register-button">Register Now</a>
+<!--                 <a href="../forms/surprise_event.html" class="event-details-register-button">Register Now</a> -->
                 
-                <p class="event-details-disclaimer">No on-spot registration available. Kindly register ASAP.</p>
+                p class="event-details-disclaimer">Registrations closed temporarily for this event.</p>
             </div>
         </div>
 
