--- a/src/surprise_event.html
+++ b/src/surprise_event.html
@@ -60,7 +60,7 @@
                  <br>
 <!--                 <a href="../forms/surprise_event.html" class="event-details-register-button">Register Now</a> -->
                 
-                <p class="event-details-disclaimer">Registrations closed temporarily for this event.</p>
+                <p class="event-details-disclaimer">Registrations closed for this event.</p>
             </div>
         </div>
 
