--- a/src/runtime_error.html
+++ b/src/runtime_error.html
@@ -69,7 +69,7 @@
                 </div>
                 <!-- <p>Team registrations: <span class="event-details-value">463</span></p> -->
                  <br>
-                <a href="../forms/runtime_error.html" class="event-details-register-button">Register Now</a>
+<!--                 <a href="../forms/runtime_error.html" class="event-details-register-button">Register Now</a> -->
                 
                 <p class="event-details-disclaimer">No on-spot registration available. Kindly register ASAP.</p>
             </div>
