--- a/src/runtime_error.html
+++ b/src/runtime_error.html
@@ -71,7 +71,7 @@
                  <br>
 <!--                 <a href="../forms/runtime_error.html" class="event-details-register-button">Register Now</a> -->
                 
-                <p class="event-details-disclaimer">No on-spot registration available. Kindly register ASAP.</p>
+                <p class="event-details-disclaimer">Registrations closed for this event.</p>
             </div>
         </div>
 
