--- a/src/innovatrix.html
+++ b/src/innovatrix.html
@@ -56,9 +56,9 @@
                 </div>
                 <!-- <p>Team registrations: <span class="event-details-value">463</span></p> -->
                  <br>
-                <a href="../forms/innovatrix.html" class="event-details-register-button">Register Now</a>
+<!--                 <a href="../forms/innovatrix.html" class="event-details-register-button">Register Now</a> -->
                 
-                <p class="event-details-disclaimer">No on-spot registration available. Kindly register ASAP.</p>
+                <p class="event-details-disclaimer">Registrations closed for this event.</p>
             </div>
         </div>
 
