--- a/src/business_mastery.html
+++ b/src/business_mastery.html
@@ -59,9 +59,11 @@
                 </div>
                 <!-- <p>Team registrations: <span class="event-details-value">463</span></p> -->
                  <br>
-                <a href="../forms/business_mastery.html" class="event-details-register-button">Register Now</a>
-                
+<!--                 <a href="../forms/business_mastery.html" class="event-details-register-button">Register Now</a> -->
+                <p class="event-details-disclaimer">Registrations closed for this event.</p>
                 <p class="event-details-disclaimer">No on-spot registration available. Kindly register ASAP.</p>
+                
+
             </div>
         </div>
 
