--- a/forms/business_mastery.html
+++ b/forms/business_mastery.html
@@ -85,10 +85,11 @@
 
             </select>
 
-            <button type="submit" id="registerBtn">
+<!--             <button type="submit" id="registerBtn">
               <span id="btnText">Register</span>
               <span id="loadingSpinner" class="spinner" style="display: none;"></span>
-            </button>
+            </button> -->
+            <p class="event-details-disclaimer">Registrations closed for this event.</p>
           </form>
         </div>
       </div>
