--- a/forms/innovatrix.html
+++ b/forms/innovatrix.html
@@ -106,14 +106,16 @@
                 <option value="3">3</option>
               </select>
 
-              <button type="submit" id="registerBtn">
+              <p class="event-details-disclaimer">Registrations closed for this event.</p>
+
+<!--               <button type="submit" id="registerBtn">
                 <span id="btnText">Register</span>
                 <span
                   id="loadingSpinner"
                   class="spinner"
                   style="display: none"
                 ></span>
-              </button>
+              </button> -->
             </form>
           </div>
         </div>
