--- a/forms/runtime_error.html
+++ b/forms/runtime_error.html
@@ -83,10 +83,11 @@
               <option value="3">3</option> -->
 
             </select>
-            <button type="submit" id="registerBtn">
+            <p class="event-details-disclaimer">Registrations closed for this event.</p>
+<!--             <button type="submit" id="registerBtn">
               <span id="btnText">Register</span>
               <span id="loadingSpinner" class="spinner" style="display: none;"></span>
-            </button>
+            </button> -->
           </form>
         </div>
       </div>
