--- a/src/business_mastery.html
+++ b/src/business_mastery.html
@@ -59,8 +59,8 @@
                 </div>
                 <!-- <p>Team registrations: <span class="event-details-value">463</span></p> -->
                  <br>
-<!--                 <a href="../forms/business_mastery.html" class="event-details-register-button">Register Now</a> -->
-                <p class="event-details-disclaimer">Registrations closed for this event.</p>
+                <a href="../forms/business_mastery.html" class="event-details-register-button">Register Now</a>
+<!--                 <p class="event-details-disclaimer">Registrations closed for this event.</p> -->
                 <p class="event-details-disclaimer">No on-spot registration available. Kindly register ASAP.</p>
                 
 
