--- a/forms/cerebra_quest.html
+++ b/forms/cerebra_quest.html
@@ -83,12 +83,12 @@
               <option value="3">3</option>
 
             </select>
-            <p class="event-details-disclaimer">Registrations closed for this event.</p>
+<!--             <p class="event-details-disclaimer">Registrations closed for this event.</p> -->
 
-<!--             <button type="submit" id="registerBtn">
+            <button type="submit" id="registerBtn">
               <span id="btnText">Register</span>
               <span id="loadingSpinner" class="spinner" style="display: none;"></span>
-            </button> -->
+            </button>
           </form>
         </div>
       </div>
