--- a/src/cerebra_quest.html
+++ b/src/cerebra_quest.html
@@ -57,7 +57,7 @@
                     <p>Time: <span class="event-details-value">09:30 AM</span></p><br>
                 </div>
                 <!-- <p>Team registrations: <span class="event-details-value">463</span></p> -->
-                 <br>                <a href="../forms/surprise_event.html" class="event-details-register-button">Register Now</a> 
+                 <br>                <a href="../forms/cerebra_quest.html" class="event-details-register-button">Register Now</a> 
                 
 <!--                 <p class="event-details-disclaimer">Registrations closed for this event.</p> -->
                 <p class="event-details-disclaimer">No on-spot registration available. Kindly register ASAP.</p>
