--- a/src/prototype_parade.html
+++ b/src/prototype_parade.html
@@ -62,9 +62,9 @@
                 </div>
                 <!-- <p>Team registrations: <span class="event-details-value">463</span></p> -->
                 <br>
-                <a href="../forms/prototype_parade.html" class="event-details-register-button">Register Now</a>
+<!--                 <a href="../forms/prototype_parade.html" class="event-details-register-button">Register Now</a> -->
 
-                <p class="event-details-disclaimer">No on-spot registration available. Kindly register ASAP.</p>
+                <p class="event-details-disclaimer">Registration closed for this event.</p>
             </div>
         </div>
 
