--- a/index.html
+++ b/index.html
@@ -135,15 +135,15 @@
             <h1 class="countdown-heading"><span>COUNTDOWN</span></h1>
             <div class="countdown-timer">
                 <div class="countdown-segment">
-                    <span class="countdown-value" id="days">00</span>
+                    <span class="countdown-value">00</span>
                     <span class="countdown-label">DAYS</span>
                 </div>
                 <div class="countdown-segment">
-                    <span class="countdown-value" id="hours">00</span>
+                    <span class="countdown-value" >00</span>
                     <span class="countdown-label">HOURS</span>
                 </div>
                 <div class="countdown-segment">
-                    <span class="countdown-value" id="minutes">00</span>
+                    <span class="countdown-value" >00</span>
                     <span class="countdown-label">MINUTES</span>
                 </div>
                 <div class="countdown-segment">
